objects/Survey_Results_Summary__c.object
<CustomObject>
    <description>Summary of the Survey Results</description>
    <fields>
        <fullName>Animal_Count__c</fullName>
        <label>Animal Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Animal_Type__c</fullName>
        <description>The type of animal the survey asked about</description>
        <label>Animal Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cattle</fullName>
                </value>
                <value>
                    <fullName>Companion</fullName>
                </value>
                <value>
                    <fullName>Dairy</fullName>
                </value>
                <value>
                    <fullName>Deer</fullName>
                </value>
                <value>
                    <fullName>Horse</fullName>
                </value>
                <value>
                    <fullName>Pet</fullName>
                </value>
                <value>
                    <fullName>Poultry</fullName>
                </value>
                <value>
                    <fullName>Show</fullName>
                </value>
                <value>
                    <fullName>Swine</fullName>
                </value>
                <value>
                    <fullName>Bee Colonies</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Answer__c</fullName>
        <description>The range of animals</description>
        <label>Answer</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Survey Results Summary</relationshipLabel>
        <relationshipName>Survey_Results_Summary</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_of_Survey__c</fullName>
        <description>Date the survey was taken.</description>
        <label>Date of Survey</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the lead object.</description>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Survey Results Summaries</relationshipLabel>
        <relationshipName>Survey_Results_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <description>The Question on the Campaign Information</description>
        <label>Question</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source2__c</fullName>
        <label>Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X18_Digit_Lead_ID__c</fullName>
        <formula>Lead__r.X18_Digit_Lead_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>18 Digit Lead ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X18_Digit_Survey_Summary_Results_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>18 Digit Survey Summary Results ID</label>
        <type>Text</type>
    </fields>
    <label>Survey Results Summary</label>
    <nameField>
        <displayFormat>ID-{00000}</displayFormat>
        <label>Survey Results ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Results Summary</pluralLabel>
    <recordTypes>
        <fullName>Digigraph</fullName>
        <active>true</active>
        <description>Digigraph Survey</description>
        <label>Digigraph</label>
    </recordTypes>
    <recordTypes>
        <fullName>Dr_Mike</fullName>
        <active>true</active>
        <description>Dr. Mike Survey Results</description>
        <label>Dr. Mike</label>
    </recordTypes>
    <recordTypes>
        <fullName>Web_Form</fullName>
        <active>true</active>
        <description>Web Form Survey Results</description>
        <label>Web Form</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>